# cmake-docker-github-actions

./: CMakeLists.txt  readme.md
.github/scripts/: install_cuda_centos.sh  install_cuda_ubuntu.sh
.github/workflows/: Draft-Release.yml  Manylinux2014.yml  Ubuntu.yml  Wheels.yml  Windows.yml  matrix-testing.yml
include/cdga/: Demo.h  cdga.h  version.h
include/cdga/detail/: DSOStuff.h
src/: CMakeLists.txt
src/cdga/: Demo.cpp  Demo.cu  version.cpp
src/cdga/detail/: DSOStuff.cpp  libcuda_stub.cu  libcudart_stub.cu
swig/: CMakeLists.txt
swig/python/: CMakeLists.txt  __init__.py.in  cdga.i  setup.py.in
tests/: CMakeLists.txt
tests/src/: main.cu
tests/swig/python/: tests.py
